tests/cases/compiler/prefixedNumberLiteralAssignToNumberLiteralType/index.ts
let x: 1 = +1;

let y: -1 = -1;

let z: 2 = 1;
//~^ ERROR: Type '1' is not assignable to type '2'.